@startuml

class Materia {
    - nombre: String
    - correlativas: List<Materia>
}

class Alumno {
    - legajo: Int
    - materiasAprobadas: List<Materia>
}

class Inscripción {
    - alumno: Alumno
    - materias: List<Materia>
    + aprobada(): Bool
}

Materia --|> Materia
Alumno --> Materia
Inscripción --> Alumno
Inscripción --> Materia

@enduml